--- a/_news/2024-news1.md
+++ b/_news/2024-news1.md
@@ -1,4 +1,4 @@
 ---
-title: "Obtained my Bachelor degree from Southeast University."
+title: "Obtained my Bachelor degree from Southeast University!"
 date: 2024-06-20
 ---
