--- a/_news/2024-news2.md
+++ b/_news/2024-news2.md
@@ -1,4 +1,4 @@
 ---
-title: "Joined Dr. Haoliang Li's group and started my PhD journey at CityUHK. "
+title: "Joined Dr. Haoliang Li's group and started my PhD journey <strong>@ CityUHK EE!</strong>. "
 date: 2024-09-01
 ---
