--- a/_news/2025-news1.md
+++ b/_news/2025-news1.md
@@ -1,4 +1,4 @@
 ---
-title: "Passed CityU EE Qualifying Examination!"
+title: "Passed CityU EE Ph.D. Qualifying Examination!"
 date: 2025-06-17
 ---
